--- a/SpinOff/02/PhraseGenerator/MainWindow.xaml
+++ b/SpinOff/02/PhraseGenerator/MainWindow.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PhraseGenerator"
         mc:Ignorable="d"
+        MouseLeftButtonDown="NounsList_MouseLeftButtonDown"
         Title="MainWindow" Height="450" Width="800">
     <Grid Background="#FFC0DCE6">
-        <ListBox x:Name="NounsList" HorizontalAlignment="Left" Height="180" Margin="25,25,0,0" VerticalAlignment="Top" Width="180" Background="#FFFFFDCA"  FontSize="24">
+        <ListBox x:Name="NounsList" HorizontalAlignment="Left" Height="180" Margin="25,25,0,0" VerticalAlignment="Top" Width="180" Background="#FFFFFDCA"  FontSize="24" >
             <ListBoxItem Content="Пяточка"/>
             <ListBoxItem Content="Сызрань"/>
             <ListBoxItem Content="Лохушка"/>
