--- a/SpinOff/03/TicTacToe/MainWindow.xaml
+++ b/SpinOff/03/TicTacToe/MainWindow.xaml
@@ -11,19 +11,17 @@
             <ColumnDefinition Width="7*"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="GameField1" Content="" HorizontalAlignment="Left" Margin="207,86,0,0" VerticalAlignment="Top" Width="130" Height="130"/>
-        <Button x:Name="GameField2" Content="" HorizontalAlignment="Left" Margin="337,86,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.ColumnSpan="2"/>
-        <Button x:Name="GameField3" Content="" HorizontalAlignment="Left" Margin="6,86,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.Column="1"/>
-        <Button x:Name="GameField4" Content="" HorizontalAlignment="Left" Margin="207,216,0,0" VerticalAlignment="Top" Width="130" Height="130"/>
-        <Button x:Name="GameField5" Content="" HorizontalAlignment="Left" Margin="337,216,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.ColumnSpan="2"/>
-        <Button x:Name="GameField6" Content="" HorizontalAlignment="Left" Margin="6,216,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.Column="1"/>
-        <Button x:Name="GameField7" Content="" HorizontalAlignment="Left" Margin="207,346,0,0" VerticalAlignment="Top" Width="130" Height="130"/>
-        <Button x:Name="GameField8" Content="" HorizontalAlignment="Left" Margin="337,346,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.ColumnSpan="2"/>
-        <Button x:Name="GameField9" Content="" HorizontalAlignment="Left" Margin="6,346,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.Column="1"/>
+        <Button x:Name="GameField1" Content="" HorizontalAlignment="Left" Margin="207,86,0,0" VerticalAlignment="Top" Width="130" Height="130" FontSize="72" Click="GameField1_Click"/>
+        <Button x:Name="GameField2" Content="" HorizontalAlignment="Left" Margin="337,86,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.ColumnSpan="2" FontSize="72" Click="GameField2_Click"/>
+        <Button x:Name="GameField3" Content="" HorizontalAlignment="Left" Margin="6,86,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.Column="1" FontSize="72" Click="GameField3_Click"/>
+        <Button x:Name="GameField4" Content="" HorizontalAlignment="Left" Margin="207,216,0,0" VerticalAlignment="Top" Width="130" Height="130" FontSize="72" Click="GameField4_Click"/>
+        <Button x:Name="GameField5" Content="" HorizontalAlignment="Left" Margin="337,216,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.ColumnSpan="2" FontSize="72" Click="GameField5_Click"/>
+        <Button x:Name="GameField6" Content="" HorizontalAlignment="Left" Margin="6,216,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.Column="1" FontSize="72" Click="GameField6_Click"/>
+        <Button x:Name="GameField7" Content="" HorizontalAlignment="Left" Margin="207,346,0,0" VerticalAlignment="Top" Width="130" Height="130" FontSize="72" Click="GameField7_Click"/>
+        <Button x:Name="GameField8" Content="" HorizontalAlignment="Left" Margin="337,346,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.ColumnSpan="2" FontSize="72" Click="GameField8_Click"/>
+        <Button x:Name="GameField9" Content="" HorizontalAlignment="Left" Margin="6,346,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.Column="1" FontSize="72" Click="GameField9_Click"/>
         <Button x:Name="RestartButton" Content="Restart" HorizontalAlignment="Left" Margin="337,486,0,0" VerticalAlignment="Top" Width="130" Height="41" FontSize="24" Grid.ColumnSpan="2"/>
-        <Label x:Name="Label" Content="     TIC-TAC-TOE" HorizontalAlignment="Left" Margin="202,10,0,0" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2" Height="66" FontSize="48"/>
-        <Label x:Name="Player1Label" Content="PLAYER&#xD;&#xA;     1 &#xD;&#xA; WON" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top" Width="171" Height="208" FontSize="48"/>
-        <Label x:Name="Player2Label" Content="PLAYER&#xA;     2 &#xA;  WON" HorizontalAlignment="Left" Margin="149,86,0,0" VerticalAlignment="Top" Width="171" Height="208" FontSize="48" Grid.Column="1"/>
+        <TextBox HorizontalAlignment="Left" Height="66" Margin="207,10,0,0" TextWrapping="Wrap" Text="    TIC-TAC-TOE" VerticalAlignment="Top" Width="395" Grid.ColumnSpan="2" FontSize="48" TextChanged="TextBox_TextChanged"/>
 
     </Grid>
 </Window>
