--- a/SpinOff/03/TicTacToe/MainWindow.xaml
+++ b/SpinOff/03/TicTacToe/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TicTacToe"
         mc:Ignorable="d"
-        Title="MainWindow" Height="564.421" Width="806.198">
+        Title="MainWindow" Height="580.421" Width="806.198">
     <Grid Margin="0,0,0,-4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="7*"/>
@@ -20,8 +20,7 @@
         <Button x:Name="GameField7" Content="" HorizontalAlignment="Left" Margin="207,346,0,0" VerticalAlignment="Top" Width="130" Height="130" FontSize="72" Click="GameField7_Click"/>
         <Button x:Name="GameField8" Content="" HorizontalAlignment="Left" Margin="337,346,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.ColumnSpan="2" FontSize="72" Click="GameField8_Click"/>
         <Button x:Name="GameField9" Content="" HorizontalAlignment="Left" Margin="6,346,0,0" VerticalAlignment="Top" Width="130" Height="130" Grid.Column="1" FontSize="72" Click="GameField9_Click"/>
-        <Button x:Name="RestartButton" Content="Restart" HorizontalAlignment="Left" Margin="337,486,0,0" VerticalAlignment="Top" Width="130" Height="41" FontSize="24" Grid.ColumnSpan="2"/>
-        <TextBox HorizontalAlignment="Left" Height="66" Margin="207,10,0,0" TextWrapping="Wrap" Text="    TIC-TAC-TOE" VerticalAlignment="Top" Width="395" Grid.ColumnSpan="2" FontSize="48" TextChanged="TextBox_TextChanged"/>
-
+        <Button x:Name="RestartButton" Content="Restart" HorizontalAlignment="Left" Margin="337,486,0,0" VerticalAlignment="Top" Width="130" Height="41" FontSize="24" Grid.ColumnSpan="2" Click="RestartButton_Click"/>
+        <Label x:Name="Label" Content="    TIC-TAC-TOE" HorizontalAlignment="Left" Margin="207,10,0,0" VerticalAlignment="Top" Width="395"   Grid.ColumnSpan="2" Height="71" FontSize="48"/>
     </Grid>
 </Window>
