--- a/SpinOff/04/Markdown2018/MainWindow.xaml
+++ b/SpinOff/04/Markdown2018/MainWindow.xaml
@@ -8,10 +8,10 @@
         Title="MainWindow" Height="507" Width="805">
     <Grid>
         <TextBox x:Name="MarkdownTextBox" HorizontalAlignment="Left" Height="399" Margin="0,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="381" FontSize="18" TextChanged="MarkdownTextBox_TextChanged" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 ScrollViewer.VerticalScrollBarVisibility="Auto" AcceptsReturn="True"/>
+                 ScrollViewer.VerticalScrollBarVisibility="Auto" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
         <Label x:Name="MarkdownLabel" Content="Markdown" HorizontalAlignment="Left" Margin="0,37,0,0" VerticalAlignment="Top" Width="93" FontSize="16"/>
         <Label x:Name="PreviewLabel" Content="Preview" HorizontalAlignment="Left" Margin="398,37,0,0" VerticalAlignment="Top" Width="93" FontSize="16"/>
-        <RichTextBox x:Name="PreviewRichTextBox" HorizontalAlignment="Left" Height="398" Margin="398,68,0,0" VerticalAlignment="Top" Width="381" ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <RichTextBox x:Name="PreviewRichTextBox" HorizontalAlignment="Left" Height="398" Margin="398,68,0,0" VerticalAlignment="Top" Width="381" ScrollViewer.VerticalScrollBarVisibility="Auto" FontSize="18" VerticalScrollBarVisibility="Auto" TextChanged="PreviewRichTextBox_TextChanged">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
