--- a/SpinOff/04/Markdown2/MainWindow.xaml
+++ b/SpinOff/04/Markdown2/MainWindow.xaml
@@ -18,6 +18,10 @@
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
+        <Button x:Name="SaveButton" Content="Save as..." HorizontalAlignment="Left" Margin="707,10,0,0" VerticalAlignment="Top" Width="75" Click="SaveButton_Click"/>
+        <Button x:Name="OpenButton" Content="Open file" HorizontalAlignment="Left" Margin="611,10,0,0" VerticalAlignment="Top" Width="75" Click="OpenButton_Click"/>
+        <Label x:Name="MarkdownLabel" Content="Markdown" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" FontSize="14"/>
+        <Label x:Name="PreviewLabel" Content="Preview" HorizontalAlignment="Left" Margin="402,41,0,0" VerticalAlignment="Top" FontSize="14"/>
 
     </Grid>
 </Window>
